syntax = "proto3";
option go_package = "../proto";

service EventService {
  rpc Save (SaveRequest) returns (SaveResponse) {
  }
  rpc Get (GetRequest) returns (GetResponse) {
  }
}

// 请求信息
message SaveRequest {
  string streamName = 1;
  string streamId = 2;
  string eventId = 3;
  bytes data = 4;
}

// 响应信息
message SaveResponse{
  bool ack = 1;
  string message = 2;
}

// 请求信息
message GetRequest {
  string streamName = 1;
  string streamId = 2;
  string eventId = 3;
}
// 响应信息
message GetResponse {
  string message = 1;
  string eventId = 2;
  bytes data = 3;
}
