syntax = "proto3";
option go_package = "../proto";

service SubscribeService {
  rpc Create (CreateRequest) returns (CreateResponse) {
  }
  rpc Delete (DeleteRequest) returns (DeleteResponse) {
  }
}

// 创建订阅
message CreateRequest {
  string name = 1;
  enum StartPoint
  {
    Current = 0;
    Begin = 1;
  }
  StartPoint start_point = 2;
  string watch_key = 3;
  string push_url = 4;
  string push_max_request_duration = 5;
  uint64 push_max_request_retry_count = 6;
  string save_interval = 7;
}

// 创建订阅返回
message CreateResponse{
  bool ack = 1;
  string message = 2;
}

// 删除订阅
message DeleteRequest {
  string name = 1;
}
// 删除订阅返回
message DeleteResponse {
  bool ack = 1;
  string message = 2;
}
